# cpp_dicom_viewer

./: CMakeLists.txt  README.md  main.cpp
src/ui/: MainWindow.cpp  MainWindow.h  mainwindow.ui
src/ui/styles/: StyleManager.cpp  StyleManager.h
src/viewer/: DicomViewer.cpp  DicomViewer.h
